--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql_db
 DB_PORT=3306
-DB_DATABASE=backend
+DB_DATABASE=microservice
 DB_USERNAME=root
 DB_PASSWORD=
 
