--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:0+Tmca2vDE6LZacihls//MDPUSzb5SkBWOPmVR0lFDs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
