--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     image: nextjs-frontend
-    volumes:
-      - ./frontend/.env:/app/.env
+    env_file:
+     - ./frontend/.env
+    # volumes:
+    #   - ./frontend/.env:/app/.env
     container_name: frontend
     depends_on:
       - backend
